[gd_scene load_steps=2 format=3 uid="uid://barpe5gxlqsf1"]

[ext_resource type="Script" path="res://Container/PauseMenu/pause_menu.gd" id="1_ogw8n"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_ogw8n")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.267, 0.267, 0.267, 0.578)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -232.0
offset_right = 320.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -175.0
offset_right = 128.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "[ Tạm dừng ]"
horizontal_alignment = 1

[node name="VBoxContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -32.0
offset_right = 192.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 2

[node name="SaveBtn" type="Button" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_right = 84.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Lưu tiến trình"

[node name="LoadBtn" type="Button" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -16.5
offset_right = 84.0
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
text = "Tải tiến trình"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -33.0
offset_right = 84.0
grow_horizontal = 2
grow_vertical = 0
text = "Thoát"

[connection signal="pressed" from="VBoxContainer/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadBtn" to="." method="_on_load_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
